--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         </nav>
     </header>
     <section>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa reprehenderit vitae nihil provident enim quo temporibus ullam! Tempora fugit eius iusto et ducimus distinctio assumenda nulla deleniti, soluta nemo nihil est nesciunt odio quos repudiandae at, tempore consequatur, labore dolorem a molestiae ab necessitatibus. Voluptatem sapiente possimus maxime architecto iste!</p>
+        <div class="container">
+            <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam provident aspernatur eum ea necessitatibus culpa asperiores aperiam incidunt eos architecto?</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa reprehenderit vitae nihil provident enim quo temporibus ullam! Tempora fugit eius iusto et ducimus distinctio assumenda nulla deleniti, soluta nemo nihil est nesciunt odio quos repudiandae at, tempore consequatur, labore dolorem a molestiae ab necessitatibus. Voluptatem sapiente possimus maxime architecto iste!</p>
+        </div>
+        <img src="imgs/concept-based-illustration-of-loading-page-1712656-1453453.webp" alt="imagem-section1" class="img-section">
     </section>
     <footer>
         <h4>&copy;2024 Phellipe</h4>
