--- a/index.html
+++ b/index.html
@@ -17,12 +17,35 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section class="section01">
         <div class="container">
             <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam provident aspernatur eum ea necessitatibus culpa asperiores aperiam incidunt eos architecto?</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa reprehenderit vitae nihil provident enim quo temporibus ullam! Tempora fugit eius iusto et ducimus distinctio assumenda nulla deleniti, soluta nemo nihil est nesciunt odio quos repudiandae at, tempore consequatur, labore dolorem a molestiae ab necessitatibus. Voluptatem sapiente possimus maxime architecto iste!</p>
+            <button class="btn-saiba-mais">Saiba mais</button>
         </div>
         <img src="imgs/concept-based-illustration-of-loading-page-1712656-1453453.webp" alt="imagem-section1" class="img-section">
+    </section>
+    <!-- continuar os cards mais tarde -->
+    <section class="section02">
+        <div class="img-section02">
+            <div class="card">
+                <div class="credit-card">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, earum!</p>
+            </div>
+            <div class="card">
+                <div class="coffe"></div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore, necessitatibus?</p>
+            </div>
+            <div class="card">
+                <div class="bag"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, perspiciatis!</p>
+            </div>
+            <div class="card">
+                <div class="smartphone"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, vero?</p>
+            </div>
+        </div> 
     </section>
     <footer>
         <h4>&copy;2024 Phellipe</h4>
